<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_basic">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_switch"
            android:summary="@string/settings_switch_preference_summary"
            android:title="@string/settings_switch_preference_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_check_box"
            android:title="@string/settings_check_box_preference_title" />

        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/settings_edit_text_preference_default_value"
            android:inputType="textCapWords"
            android:key="pref_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_edit_text_preference_title" />

        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="60"
            android:dialogTitle="@string/settings_list_preference_dialog_title"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"
            android:key="pref_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_list_preference_title" />

        <MultiSelectListPreference
            android:dialogTitle="@string/settings_multi_select_list_preference_dialog_title"
            android:entries="@array/settings_multi_select_list_preference_titles"
            android:entryValues="@array/settings_multi_select_list_preference_values"
            android:key="pref_multi_select_list"
            android:title="@string/settings_multi_select_list_preference_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_advanced">
        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>

        <!-- A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="pref_notifications_new_message"
            android:key="pref_notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category_other">
        <Preference
            android:key="pref_click"
            android:title="@string/settings_preference_click_title" />
    </PreferenceCategory>

</PreferenceScreen>