<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/dimen_common"
            android:text="@string/change_bottom_bar_text"
            android:textColor="@color/colorPrimary"
            android:translationZ="@dimen/dimen_common_small" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="@dimen/dimen_common"
            android:paddingEnd="@dimen/dimen_common"
            android:paddingBottom="@dimen/dimen_common_small"
            android:translationZ="@dimen/dimen_common_small"
            app:chipSpacingHorizontal="@dimen/dimen_common"
            app:chipSpacingVertical="@dimen/dimen_common_very_small"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/position_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/right_align" />

            <com.google.android.material.chip.Chip
                android:id="@+id/radius_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/zero_radius" />

            <com.google.android.material.chip.Chip
                android:id="@+id/margin_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/zero_margin" />

            <com.google.android.material.chip.Chip
                android:id="@+id/show_title_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/show_title" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_bottom_appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bottom_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/bottom_App_bar" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_App_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:buttonGravity="bottom|top"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/bottom_app_bar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/nav_bottom_appbar"
            android:textStyle="bold"
            android:visibility="gone" />
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>