<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_common"
    android:layout_marginTop="@dimen/dimen_common_small"
    android:layout_marginEnd="@dimen/dimen_common"
    android:layout_marginBottom="@dimen/dimen_common_small"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_card_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_card_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_card_1"
            android:layout_marginStart="@dimen/dimen_common"
            android:layout_marginTop="@dimen/dimen_common"
            android:layout_marginEnd="@dimen/dimen_common"
            android:text="@string/main_card_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:id="@+id/tv_card_1_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_1_title"
            android:layout_marginStart="@dimen/dimen_common"
            android:layout_marginTop="@dimen/dimen_common"
            android:layout_marginEnd="@dimen/dimen_common"
            android:layout_marginBottom="@dimen/dimen_common"
            android:text="@string/main_card_subtitle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card_1_action1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_1_subtitle"
            android:layout_margin="@dimen/dimen_common_small"
            android:text="@string/main_card_button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card_1_action2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_1_subtitle"
            android:layout_marginTop="@dimen/dimen_common_small"
            android:layout_marginBottom="@dimen/dimen_common_small"
            android:layout_toEndOf="@id/btn_card_1_action1"
            android:text="@string/main_card_button_2" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>